--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:25XSmTyjE3jAXQ9nxD2ZFpwHjf7b/BkEIYByT0OvEss=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -10,7 +10,7 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_PORT=44336
 DB_DATABASE=laravel
 DB_USERNAME=admin
 DB_PASSWORD=abc123
